<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".BasketActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:title="@string/lenta"
        app:titleMarginStart="25dp"
        app:titleTextColor="@color/white"
        app:subtitle="@string/mini"
        app:subtitleTextColor="@color/white"
        app:logo="@drawable/baseline_diversity_2_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/basket"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="5dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        tools:listitem="@layout/list_item"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatButtonBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="200dp"
            android:backgroundTint="@color/yellow"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/check"
            tools:ignore="ContentDescription" />

    </FrameLayout>

</LinearLayout>